--- a/docs/mojo.css
+++ b/docs/mojo.css
@@ -129,6 +129,7 @@ h2.background span {
   margin-left: -4rem;
   font-weight: 700;
   letter-spacing: -0.5px;
+  display: inline !important;
 }
 .homepage .homepage-content .subtitle {
   font-size: 2.3rem;
@@ -136,6 +137,7 @@ h2.background span {
   letter-spacing: 1px;
   font-family: "Jost";
   margin-left: -4rem;
+  display: inline-block !important;
 }
 
 @media (max-width: 767px) {
