Fixing the social media links. Added more meta tags
Updating a few links and bits of examples still lingering about.
SEO updates

--- a/src/mixins/schema.pug
+++ b/src/mixins/schema.pug
@@ -6,10 +6,10 @@ mixin author()
       "name": "Derek Scott",
       "jobTitle": "Developer Extraordinaire",
       "affiliation": "Freelance Developer",
-      "description": "Derek Scott is a Developer Extraordinaire with over a decade of experience in web development, recognized at industry conferences.",
+      "description": "Derek Scott is a Developer Extraordinaire with over a decade of experience in web development. Passionate and hardworking, even being recognized at industry conferences.",
       "sameAs": [
-        "https://facebook.com/derekscott",
-        "https://x.com/derekscott",
-        "https://reddit.com/user/derekscott"
+        "https://github.com/johnny13",
+        "https://www.linkedin.com/in/derekscott13/",
+        "https://discordapp.com/users/johnnyfortune_21837"
       ]
     }
