--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -321,17 +321,17 @@ block content
                             .card-body.p-0.ps-1
                                 ul.list-group.list-group-flush.rounded-3.social-links.jura.normal
                                     li.list-group-item.d-flex.justify-content-between.align-items-center.p-3
-                                        i.bx.bxl-facebook-square(style="color: #3b5998;")
+                                        i.bx.bxl-microsoft(style="color: #3b5998;")
                                         p.mb-0
-                                            a(href="https://facebook.com/janedoe" target="_blank") facebook.com/derek
+                                            a(href="https://github.com/johnny13" target="_blank") github.com/johnny13
                                     li.list-group-item.d-flex.justify-content-between.align-items-center.p-3
-                                        i.bx.bxl-twitter(style="color: #55acee;")
+                                        i.bx.bxl-linkedin-square(style="color: #55acee;")
                                         p.mb-0
-                                            a(href="https://x.com/janedoe" target="_blank") x.com/derek
+                                            a(href="https://www.linkedin.com/in/derekscott13/" target="_blank") linkedin.com/in/derekscott13/
                                     li.list-group-item.d-flex.justify-content-between.align-items-center.p-3
-                                        i.bx.bxl-reddit(style="color: #ff4500;")
+                                        i.bx.bxl-discord(style="color: #5865F2")
                                         p.mb-0
-                                            a(href="https://reddit.com/user/janedoe" target="_blank") reddit.com/user/derek
+                                            a(href="https://discordapp.com/users/johnnyfortune_21837" target="_blank") discord / johnnyfortune
 
                     .col-md-7.col-lg-8.author-details
                         .pt-0.jost.normal
