--- a/src/views/headmeta.pug
+++ b/src/views/headmeta.pug
@@ -1,8 +1,28 @@
 meta(charset="UTF-8")
 title= title
-meta(name="description", content= metaDesc )
+meta(name="description" content="Browse Derek Scott's portfolio and resume to see his professional accomplishments and unique skills. Find out how he can make a difference for you." )
 meta(name='keywords' content= keywordDesc)
+meta(name="robots" content="index, follow")
+meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
+meta(name="language" content="English")
+meta(name="revisit-after" content="3 days")
+meta(name="author" content="Derek Scott")
 meta(name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
+meta(property="og:title" content="derek scotts professional portfolio and resume")
+meta(property="og:type" content="website")
+meta(property="og:url" content="https://johnny13.github.io/irock/")
+meta(property="og:image" content="https://i.imgur.com/4rvlerp.jpeg")
+meta(property="og:description" content="Visit Derek Scott's portfolio to view his impressive resume and diverse skill set. Learn how his expertise can contribute to your success.")
+meta(property="og:locale" content="en_US")
+meta(property="og:site_name" content="Github")
+<!-- Twitter -->
+meta(property="twitter:card" content="summary_large_image")
+meta(property="twitter:url" content="https://johnny13.github.io/irock/")
+meta(property="twitter:title" content="Derek Scott's professional portfolio and resume")
+meta(property="twitter:description" content="Browse Derek Scott's portfolio and resume to see his professional accomplishments and unique skills. Find out how he can make a difference for you.")
+meta(property="twitter:image" content="https://i.imgur.com/4rvlerp.jpeg")
+
+
 link(rel="icon" type="image/png", href= "favicon-32x32.png" sizes="32x32")
 link(rel="icon" type="image/png", href= "favicon-16x16.png" sizes="16x16")
 link(href="favicon.ico" rel="shortcut icon" type="image/x-icon")
